tests/baselines/reference/parserReturnStatement1.errors.txt
==== tests/cases/compiler/parserReturnStatement1.ts (1 errors) ====
    return;
    ~~~~~~
!!! parserReturnStatement1.ts(1,1): error TS1108: 'return' statement must be contained within a function body.